Cleanup directory structure

--- a/static/jodel.html
+++ b/static/jodel.html
@@ -15,27 +15,27 @@
     @font-face {
         font-family: "Gotham";
         font-style: normal;
-        src: url("./fonts/Gotham-Book.otf") format("opentype");
+        src: url("fonts/Gotham-Book.otf") format("opentype");
     }
 
     @font-face {
         font-family: "Gotham";
         font-style: italic;
-        src: url("./fonts/Gotham-BookItalic.otf") format("opentype");
+        src: url("fonts/Gotham-BookItalic.otf") format("opentype");
     }
 
     @font-face {
         font-family: "Gotham";
         font-style: normal;
         font-weight: bold;
-        src: url("./fonts/Gotham-Bold.otf") format("opentype");
+        src: url("fonts/Gotham-Bold.otf") format("opentype");
     }
 
     @font-face {
         font-family: "Gotham";
         font-style: italic;
         font-weight: bold;
-        src: url("./fonts/Gotham-BoldItalic.otf") format("opentype");
+        src: url("fonts/Gotham-BoldItalic.otf") format("opentype");
     }
 
     h6, small, .fa-comments {
