--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link href="build/css/main.min.css" rel="stylesheet">
     <!-- use the cdn version until v5 is available as npm package -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="build/js/head.min.js"></script>
 </head>
 <body>
-<div class="container">
-    <div class="card-columns" id="app">
+<div class="container" id="app">
+    <div class="card-columns">
         <div class="card text-white" :style="{ background: post.color}" data-toggle="modal" v-for="post in posts"
-             :data-target="'#' + post.id">
+             :data-target="'#' + post.post_id">
             <!-- image post -->
             <div v-if="post.image_url">
                 <div style="overflow: hidden;">
