--- a/index.html
+++ b/index.html
@@ -7,281 +7,76 @@
     <link href="build/css/main.min.css" rel="stylesheet">
     <!-- use the cdn version until v5 is available as npm package -->
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
-    <script src="build/js/head.min.js"></script>
 </head>
 <body>
 <div class="container" id="app">
     <div class="card-columns">
-        <div class="card text-white" :style="{ background: post.color}" data-toggle="modal" v-for="post in posts"
-             :data-target="'#' + post.post_id">
+        <div class="card text-white" :style="{ 'background-color': '#' + post.color }" v-for="post of posts">
             <!-- image post -->
             <div v-if="post.image_url">
                 <div style="overflow: hidden;">
                     <img class="card-img"
-                         src="http://dgue1f1nm4nsd.cloudfront.net/5a8800f229e9790010545a48_rW8tS81guPXFRM4J_thumb.jpeg"
+                         :src="'http:' + post.image_url"
                          width="286" height="180" alt="Card image">
                 </div>
                 <div class="card-img-overlay">
-                    <jodel-post :post="post"></jodel-post>
-                </div>
-            </div>
-            <!-- normal post -->
-            <div class="card-body" v-else>
-                <jodel-post :post="post"></jodel-post>
-            </div>
-            <!-- Modal Post -->
-            <div class="modal fade" id="exampleModalPost" tabindex="-1" role="dialog"
-                 aria-labelledby="exampleModalPostTitle"
-                 aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content" :style="{ background: post.color}">
-                        <div class="modal-header text-white">
+                    <div class="row">
+                        <div class="col-10">
                             <div class="row">
                                 <div class="col-12">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • <b>Main
-                                                Feed</b> • 1min <i class="fas fa-times float-right "
-                                                                   data-dismiss="modal"></i></h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-10">
-                                            <p class="card-text">Wenns Display defekt ist muss halt die Maus her😂</p>
-                                        </div>
-                                        <div class="col-2 align-self-center">
-                                            <div class="col-12">
-                                                <i class="fas fa-angle-up"></i>
-                                                5
-                                                <i class="fas fa-angle-down"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p></p>
-                                            <i class="far fa-comments"> </i>
-                                            <small>3</small>
-                                            <div class=" text-center text-white">
-                                                <i class="fas fa-ellipsis-h"></i>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <h6 class="card-title"><i class="fas fa-map-marker-alt"></i> here • <b>Main Feed</b> • {{ post.created_at | moment}}</h6>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <p class="card-text">{{ post.message }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <p></p>
+                                    <i class="far fa-comments"> </i>
+                                    <small>{{ post.child_count }}</small>
                                 </div>
                             </div>
                         </div>
-                        <div class="modal-body">
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
+                        <div class="col-2 align-self-center">
+                            <div class="col-12">
+                                <i class="fas fa-angle-up"></i>
+                                {{ post.vote_count }}
+                                <i class="fas fa-angle-down"></i>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Modal Post with Image -->
-            <div class="modal fade" id="exampleModalPostImage" tabindex="-1" role="dialog"
-                 aria-labelledby="exampleModalPostImageTitle" aria-hidden="true">
-                <div class="modal-dialog" role="document">
-                    <div class="modal-content" :style="{ background: post.color}">
-                        <div class="modal-header text-white" style="padding: 0px;">
-                            <div style="overflow: hidden; width: 100%;">
-                                <img class="card-img"
-                                     src="http://dgue1f1nm4nsd.cloudfront.net/5a8800f229e9790010545a48_rW8tS81guPXFRM4J_thumb.jpeg"
-                                     height="180" alt="Card image">
-                            </div>
-                            <div class="card-img-overlay">
-                                <div class="row">
-                                    <div class="col-10">
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <h6 class="card-title"><i class="far fa-map-marker"></i> here • <b>Main
-                                                    Feed</b> • 1min</h6>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <p>️</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-12">
-                                                <p></p>
-                                                <i class="far fa-comments"> </i>
-                                                <small>3</small>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-2 align-self-center">
-                                        <div class="col-12">
-                                            <i class="fas fa-angle-up"></i>
-                                            3
-                                            <i class="fas fa-angle-down"></i>
-                                        </div>
-                                    </div>
-                                </div>
+            <!-- normal post -->
+            <div class="card-body" v-else>
+                <div class="row">
+                    <div class="col-10">
+                        <div class="row">
+                            <div class="col-12">
+                                <h6 class="card-title"><i class="fas fa-map-marker-alt"></i> here • <b>Main Feed</b> • {{ post.created_at | moment}}</h6>
                             </div>
                         </div>
-                        <div class="modal-body">
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p class="card-text">{{ post.message }}</p>
                             </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <p></p>
+                                <i class="far fa-comments"> </i>
+                                <small>{{ post.child_count }}</small>
                             </div>
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-10">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <h6 class="card-title"><i class="far fa-map-marker"></i> here • 1min</h6>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <p class="card-text text-white">Wenns Display defekt ist muss halt die Maus
-                                                her😂</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-2 align-self-center text-white">
-                                    <div class="col-12">
-                                        <i class="fas fa-angle-up"></i>
-                                        5
-                                        <i class="fas fa-angle-down"></i>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 text-center text-white">
-                                    <i class="fas fa-ellipsis-h"></i>
-                                </div>
-                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 align-self-center">
+                        <div class="col-12">
+                            <i class="fas fa-angle-up"></i>
+                            {{ post.vote_count }}
+                            <i class="fas fa-angle-down"></i>
                         </div>
                     </div>
                 </div>
@@ -289,6 +84,12 @@
         </div>
     </div>
 </div>
-<script src="build/js/app.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.21.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.14/dist/vue.js"></script>
+<script src="resources/js/vue.js"></script>
+<script>
+    moment().format();
+</script>
 </body>
 </html>
